# repo-to-shorts-agent

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.githooks/: commit-msg
.hermes/skill/: SKILL.md
docs/: HACKATHON_STRATEGY.md  PRD.md  demo-script.md  implementation-plan.md  submission-checklist.md  submission-copy.md  taste-research.md
docs/codex/: 2026-05-04-remotion-polish.md
docs/opencode/: 2026-05-04-submission-copy-task.md
docs/plans/: 2026-05-01-live-kimi-render-plan.md  2026-05-02-creative-mp4-renderer-plan.md  2026-05-03-creative-rendering-engine-plan.md  2026-05-03-local-web-ui-plan.md  2026-05-03-polish-upgrade-plan.md
docs/submission/: demo-shot-list.md  discord-post.md  x-post-variants.md
remotion/: render.mjs
remotion/src/: RepoShortsVideo.tsx  index.ts  sceneTypes.ts  styles.ts
scripts/: run-local-final.sh  variant-remix.py
src/repo_to_shorts/: cli.py  compositor.py  creative_director.py  hermes_skill.py  heygen_render.py  hyperframes_render.py  ingest.py  kimi.py  manim_render.py  media_validation.py  pipeline.py  production.py  progress.py  remotion_render.py  render.py  submissions.py  taste.py  taste_qa.py  (+2 more)
tests/: test_cli.py  test_compositor.py  test_creative_director.py  test_hermes_skill.py  test_kimi.py  test_local_runner.py  test_manim_render.py  test_media_validation.py  test_pipeline.py  test_production.py  test_progress.py  test_remotion_render.py  test_render.py  test_submissions.py  test_taste.py  test_taste_qa.py  test_web.py  test_web_progress.py
(+11 files in other folders)
